syntax = "proto3";

package proto;
option go_package = "./";

message VideoChunkRequest {
  uint64 video_id = 1;
  double seek = 2;
}

message VideoMetadataRequest {
  uint64 video_id = 1;
}

message VideoMetadata {
  bytes metadata = 1;
  double video_duration = 2;
  repeated string text_track_languages = 3;
  repeated string audio_track_languages = 4;
}

message VideoTextTrackRequest {
  string language = 1;
}

message VideoTextTrack {
  bytes text_track = 1;
}

message VideoAudioTrackRequest {
  string language = 1;
}

message VideoAudioTrack {
  bytes audio_track = 1;
}

message VideoChunk {
  bytes data = 1;
  double start_time = 2;
  double end_time = 3;
}

service VideoService {
  rpc GetVideoChunk (VideoChunkRequest) returns (VideoChunk) {}
  rpc GetVideoMetadata (VideoMetadataRequest) returns (VideoMetadata) {}
  rpc GetVideoTextTrack (VideoTextTrackRequest) returns (VideoTextTrack) {}
  rpc GetVideoAudioTrack (VideoAudioTrackRequest) returns (VideoAudioTrack) {}
}
